--- a/project2_group5.ipynb
+++ b/project2_group5.ipynb
@@ -234,7 +234,15 @@
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
+    "\n",
+    "# Get descriptive statistics\n",
+    "summary_stats = crowdfunding_info_df.describe()\n",
+    "summary_stats\n",
+    "\n",
+    "# Get concise summary\n",
+    "concise_summary = crowdfunding_info_df.info()\n",
+    "concise_summary"
    ]
   },
   {
@@ -263,21 +271,19 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['cf_id', 'contact_id', 'company_name', 'blurb', 'goal', 'pledged',\n",
-       "       'outcome', 'backers_count', 'country', 'currency', 'launched_at',\n",
-       "       'deadline', 'staff_pick', 'spotlight', 'category & sub-category'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['cf_id', 'contact_id', 'company_name', 'blurb', 'goal', 'pledged',\n",
+      "       'outcome', 'backers_count', 'country', 'currency', 'launched_at',\n",
+      "       'deadline', 'staff_pick', 'spotlight', 'category & sub-category'],\n",
+      "      dtype='object')\n"
+     ]
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n"
+    "# Get the crowdfunding_info_df columns.\n",
+    "print(crowdfunding_info_df.columns)"
    ]
   },
   {
@@ -466,7 +472,9 @@
     }
    ],
    "source": [
-    "# Assign the category and subcategory values to category and subcategory columns.\n"
+    "# Assign the 'category & sub-category' column into 'category' and 'subcategory' columns\n",
+    "crowdfunding_info_df[['category', 'subcategory']] = crowdfunding_info_df['category & sub-category'].str.split('/', expand=True)\n",
+    "crowdfunding_info_df.head()"
    ]
   },
   {
@@ -478,9 +486,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['food' 'music' 'technology' 'theater' 'film & video' 'publishing' 'games'\n",
+      "Categories: ['food' 'music' 'technology' 'theater' 'film & video' 'publishing' 'games'\n",
       " 'photography' 'journalism']\n",
-      "['food trucks' 'rock' 'web' 'plays' 'documentary' 'electric music' 'drama'\n",
+      "Subcategories: ['food trucks' 'rock' 'web' 'plays' 'documentary' 'electric music' 'drama'\n",
       " 'indie rock' 'wearables' 'nonfiction' 'animation' 'video games' 'shorts'\n",
       " 'fiction' 'photography books' 'radio & podcasts' 'metal' 'jazz'\n",
       " 'translations' 'television' 'mobile games' 'world music'\n",
@@ -489,11 +497,16 @@
     }
    ],
    "source": [
-    "# Get the unique categories and subcategories in separate lists.\n",
     "\n",
+    "# Get unique categories\n",
+    "categories = crowdfunding_info_df['category'].unique()\n",
     "\n",
-    "print(categories)\n",
-    "print(subcategories)"
+    "# Get unique subcategories\n",
+    "subcategories = crowdfunding_info_df['subcategory'].unique()\n",
+    "\n",
+    "# Print the lists\n",
+    "print(\"Categories:\", categories)\n",
+    "print(\"Subcategories:\", subcategories)"
    ]
   },
   {
@@ -548,19 +561,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['cat1', 'cat2', 'cat3', 'cat4', 'cat5', 'cat6', 'cat7', 'cat8', 'cat9']\n",
-      "['subcat1', 'subcat2', 'subcat3', 'subcat4', 'subcat5', 'subcat6', 'subcat7', 'subcat8', 'subcat9', 'subcat10', 'subcat11', 'subcat12', 'subcat13', 'subcat14', 'subcat15', 'subcat16', 'subcat17', 'subcat18', 'subcat19', 'subcat20', 'subcat21', 'subcat22', 'subcat23', 'subcat24']\n"
+      "Category IDs: ['cat1', 'cat2', 'cat3', 'cat4', 'cat5', 'cat6', 'cat7', 'cat8', 'cat9']\n",
+      "Subcategory IDs: ['subcat1', 'subcat2', 'subcat3', 'subcat4', 'subcat5', 'subcat6', 'subcat7', 'subcat8', 'subcat9', 'subcat10', 'subcat11', 'subcat12', 'subcat13', 'subcat14', 'subcat15', 'subcat16', 'subcat17', 'subcat18', 'subcat19', 'subcat20', 'subcat21', 'subcat22', 'subcat23', 'subcat24']\n"
      ]
     }
    ],
    "source": [
-    "# Use a list comprehension to add \"cat\" to each category_id. \n",
+    "# Add \"cat\" to each category_id\n",
+    "cat_ids = ['cat' + str(id) for id in category_ids]\n",
     "\n",
-    "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
+    "# Add \"subcat\" to each subcategory_id\n",
+    "scat_ids = ['subcat' + str(id) for id in subcategory_ids]\n",
     "\n",
-    "    \n",
-    "print(cat_ids)\n",
-    "print(scat_ids)"
+    "# Print the new lists\n",
+    "print(\"Category IDs:\", cat_ids)\n",
+    "print(\"Subcategory IDs:\", scat_ids)"
    ]
   },
   {
@@ -569,9 +584,312 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
+    "# Create a category DataFrame\n",
+    "category_df = pd.DataFrame({\n",
+    "    'category_id': cat_ids,\n",
+    "    'category': categories\n",
+    "})\n",
     "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
+    "# Create a subcategory DataFrame\n",
+    "subcategory_df = pd.DataFrame({\n",
+    "    'subcategory_id': scat_ids,\n",
+    "    'subcategory': subcategories\n",
+    "})\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category_id</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cat1</td>\n",
+       "      <td>food</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cat2</td>\n",
+       "      <td>music</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cat3</td>\n",
+       "      <td>technology</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cat4</td>\n",
+       "      <td>theater</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>cat5</td>\n",
+       "      <td>film &amp; video</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>cat6</td>\n",
+       "      <td>publishing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>cat7</td>\n",
+       "      <td>games</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>cat8</td>\n",
+       "      <td>photography</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>cat9</td>\n",
+       "      <td>journalism</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  category_id      category\n",
+       "0        cat1          food\n",
+       "1        cat2         music\n",
+       "2        cat3    technology\n",
+       "3        cat4       theater\n",
+       "4        cat5  film & video\n",
+       "5        cat6    publishing\n",
+       "6        cat7         games\n",
+       "7        cat8   photography\n",
+       "8        cat9    journalism"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "category_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subcategory_id</th>\n",
+       "      <th>subcategory</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>subcat1</td>\n",
+       "      <td>food trucks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>subcat2</td>\n",
+       "      <td>rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>subcat3</td>\n",
+       "      <td>web</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>subcat4</td>\n",
+       "      <td>plays</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>subcat5</td>\n",
+       "      <td>documentary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>subcat6</td>\n",
+       "      <td>electric music</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>subcat7</td>\n",
+       "      <td>drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>subcat8</td>\n",
+       "      <td>indie rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>subcat9</td>\n",
+       "      <td>wearables</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>subcat10</td>\n",
+       "      <td>nonfiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>subcat11</td>\n",
+       "      <td>animation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>subcat12</td>\n",
+       "      <td>video games</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>subcat13</td>\n",
+       "      <td>shorts</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>subcat14</td>\n",
+       "      <td>fiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>subcat15</td>\n",
+       "      <td>photography books</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>subcat16</td>\n",
+       "      <td>radio &amp; podcasts</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>subcat17</td>\n",
+       "      <td>metal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>subcat18</td>\n",
+       "      <td>jazz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>subcat19</td>\n",
+       "      <td>translations</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>subcat20</td>\n",
+       "      <td>television</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>subcat21</td>\n",
+       "      <td>mobile games</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>subcat22</td>\n",
+       "      <td>world music</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>subcat23</td>\n",
+       "      <td>science fiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>subcat24</td>\n",
+       "      <td>audio</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   subcategory_id        subcategory\n",
+       "0         subcat1        food trucks\n",
+       "1         subcat2               rock\n",
+       "2         subcat3                web\n",
+       "3         subcat4              plays\n",
+       "4         subcat5        documentary\n",
+       "5         subcat6     electric music\n",
+       "6         subcat7              drama\n",
+       "7         subcat8         indie rock\n",
+       "8         subcat9          wearables\n",
+       "9        subcat10         nonfiction\n",
+       "10       subcat11          animation\n",
+       "11       subcat12        video games\n",
+       "12       subcat13             shorts\n",
+       "13       subcat14            fiction\n",
+       "14       subcat15  photography books\n",
+       "15       subcat16   radio & podcasts\n",
+       "16       subcat17              metal\n",
+       "17       subcat18               jazz\n",
+       "18       subcat19       translations\n",
+       "19       subcat20         television\n",
+       "20       subcat21       mobile games\n",
+       "21       subcat22        world music\n",
+       "22       subcat23    science fiction\n",
+       "23       subcat24              audio"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subcategory_df"
    ]
   },
   {
@@ -3707,7 +4025,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
